--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
     driver: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/kaisheng
     username: root
-    password: root
+    password: root123456
