--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,10 @@ server:
 spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
-    time-zone: GMT+8
+    time_zone: GMT+8
 
   datasource:
     driver: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/kaisheng
     username: root
-    password: root123456
+    password: root
