--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -70,6 +71,16 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+         <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.11.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.11.1</version>
+            </dependency>
     </dependencies>
 
     <build>
