--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,6 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/kaisheng?serverTimezone=Asia/Shanghai
     username: root
-    password: root123456
+    password: ks123!@#
+#    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
