--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,6 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/kaisheng?serverTimezone=Asia/Shanghai
     username: root
-    password: ks123!@#
-#    password: root
+#    password: ks123!@#
+    password: root123456
     driver-class-name: com.mysql.cj.jdbc.Driver
